<resources>
    <string name="app_name">Navigation View Example</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="fifth">Fifth</string>
    <string name="header_name">This is the header</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="greeting">Open the Navigation View</string>
    <string name="fragment_1">FRAGMENT 1</string>
    <string name="fragment_2">FRAGMENT 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
